--- a/_checkout.html
+++ b/_checkout.html
@@ -8,13 +8,13 @@
             <h4>If driver cannot locate your specific item, buy... </h4>
             <div class="list-group" id="notes" data-toggle="buttons">
                 <label class="btn list-group-item active">
-                    <input type="radio" name="options" id="option1" autocomplete="off" checked>Cheapest option
+                    <input type="radio" name="specialnotes" id="option1" value="cheapest" autocomplete="off" checked>Cheapest option
                 </label>
                 <label class="btn list-group-item">
-                    <input type="radio" name="options" id="option2" autocomplete="off">Most expensive option
+                    <input type="radio" name="specialnotes" id="option2" value="expensive" autocomplete="off">Most expensive option
                 </label>
                 <label class="btn list-group-item">
-                    <input type="radio" name="options" id="option3" autocomplete="off">Nothing
+                    <input type="radio" name="specialnotes" id="option3" value="none" autocomplete="off">Nothing
                 </label>
             </div>
 
