--- a/_accSetting.html
+++ b/_accSetting.html
@@ -30,7 +30,6 @@
                         </div>
                         <div class="row">
                             <div class="col-xs-8 col-xs-offset-2">
-
                                 <div class="form-group">
                                     <label for="lname">Last Name:</label>
                                     <input type="string" class="form-control" id="lname">
@@ -66,8 +65,8 @@
                         <div class="row">
                             <div class="col-xs-8 col-xs-offset-2">
                                 <div class="form-group">
-                                    <label for="addressI">Address:</label>
-                                    <input type="text" class="form-control" id="addressI">
+                                    <label for="street">Address:</label>
+                                    <input type="text" class="form-control" id="street">
                                 </div>
                             </div>
                         </div>
@@ -121,10 +120,12 @@
                             </div>
                         </div>
                         <div class="row">
-                            <label for="ex-month">Card Expiration Date:</label>
                             <div class="form-inline col-xs-8 col-xs-offset-2">
+                                <div class="row">
+                                    <label for="month">Card Expiration Date:</label>
+                                </div>
                                 <div class="form-group">
-                                    <select class="form-control" id="ex-month">
+                                    <select class="form-control" id="month">
                                         <option>January</option>
                                         <option>February</option>
                                         <option>March</option>
@@ -140,7 +141,7 @@
                                     </select>
                                 </div>
                                 <div class="form-group">
-                                    <select class="form-control" id="ex-year">
+                                    <select class="form-control" id="year">
                                         <option>2015</option>
                                         <option>2016</option>
                                         <option>2017</option>
@@ -174,7 +175,7 @@
                                 <label>Are you sure you want to delete your account?</label>
                             </div>
                         </div>
-                        <button class="btn btn-primary">Delete</button>
+                        <button id="submit_delete" class="btn btn-primary">Delete</button>
                     </form>
                 </div>
             </div>
