moved some things over from shopping.scss to default.scss

--- a/_shopping.html
+++ b/_shopping.html
@@ -23,7 +23,7 @@
             <div class="col-xs-12">
                 <div class="todo-footer">
                     <div id="footerInfo">
-                        <div id="item"></div>
+                        <div id="numItems"></div>
                         <button id="submit_list" type="button" class="btn btn-link">
                             Submit
                         </button>
