--- a/_driverList2.html
+++ b/_driverList2.html
@@ -1,10 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
 <body>
 
+<div class="container text-center" id="shopping">
+    <div class="row" >
+        <div class="col-xs-12">
+            <h2 id="listName"></h2>
+            <h3 id="phone"></h3>
+        </div>
+    </div>
+
+    <div class="container" id = "box">
+        <div class="row" >
+            <div class="col-xs-12">
+                <ul id="list"></ul>
+            </div>
+        </div>
+
+        <div class = "row">
+            <div class="col-xs-12">
+                <div class="todo-footer">
+                    <div id="footerInfo">
+                        <div id="numItems"></div>
+                        <button id="submit_list" type="button" class="btn btn-link">
+                            submit
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id = "footerBars">
+        <div class="footer2"></div>
+        <div class="footer3"></div>
+    </div>
+
+</div>
+
+<script src="js/_driverList2.js"></script>
 </body>
-</html>
+
