--- a/_passwordReset.html
+++ b/_passwordReset.html
@@ -1,8 +1,9 @@
 <body>
     <div class = "container-fluid" id="passwordReset">
+
         <div class="row">
-            <div class="col-xs-2 col-md-2"></div>
-            <div class="col-xs-8 col-md-8">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+                <h3> Password Reset</h3>
                 <form>
                     <fieldset class="form-group">
                         <label for="pass1"></label>
