--- a/_login.html
+++ b/_login.html
@@ -3,17 +3,27 @@
 <div class="container">
     <div class="row text-center">
         <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-lg-4 col-md-offset-3 col-lg-offset-4">
-            <h2 class="form-signin-heading">Fetch Login</h2>
-            <input type="text" class="form-control" id="user-name" name="username" placeholder="User Name"  required="" autofocus=""/>
-            <input type="password" class="form-control" id="pass" name="password" placeholder="Password" required=""/>
+            <h2 class="form-signin-heading">Fetch Login</h2><br>
+            <input type="text" class="form-control" id="user-name" name="username" placeholder="User Name"  required="" autofocus=""/><br>
+            <input type="password" class="form-control" id="pass" name="password" placeholder="Password" required=""/><br>
             <div class="checkbox">
-                <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
+                <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me<br>
             </div>
             <button class="btn btn-lg btn-warning btn-block" id="login" type="submit">Login</button>
         </div>
     </div>
 </div>
 <script>
+    $('#login').prop('disabled',true);
+    $('#user-name,#pass').keyup(function(){
+        if($('#user-name').val()&& $('#pass').val()) {
+            $('#login').prop('disabled',false);
+
+        }
+        else{
+            $('#login').prop('disabled',true);
+        }
+    });
     $('#login').click(function () {
 
             sendToServer();
