--- a/_signUp.html
+++ b/_signUp.html
@@ -2,16 +2,27 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-xs-12">
-        <h2 class="form-signin-heading">Fetch Sign-Up</h2>
-        <input type="text" class="form-control" name="Email" placeholder="User Email" id="Email" required="" autofocus=""/>
-        <input type="text" class="form-control" name="username" placeholder="User Name" id="user-name" required="" autofocus=""/>
-        <input type="password" class="form-control" name="password" placeholder="Password" id="pass" required=""/>
-        <button class="btn btn-lg btn-warning btn-block" id="signup" type="submit">Sign-Up</button>
+        <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-lg-4 col-md-offset-3 col-lg-offset-4">
+        <h2 class="form-signin-heading">Fetch Sign-Up</h2><br>
+        <input type="text" class="form-control" name="Email" placeholder="Your email" id="Email" required="" autofocus=""/><br>
+        <input type="text" class="form-control" name="username" placeholder="Your name" id="user-name" required="" autofocus=""/><br>
+        <input type="password" class="form-control" name="password" placeholder="Create a password" id="pass" required=""/><br>
+        <input type="password" class="form-control" name="password" placeholder="Confirm your password" id="re-pass" required=""/><br>
+        <button class="btn btn-lg btn-warning btn-block" id="signup" type="submit">Sign-Up</button><br>
         </div>
     </div>
 </div>
 <script>
+    $('#signup').prop('disabled',true);
+    $('#Email,#user-name,#pass,#re-pass').keyup(function(){
+        if($('#user-name').val()&& $('#pass').val()&& $('#Email').val()&& $('#re-pass').val() && ($('#pass').val() == $('#re-pass').val())) {
+            $('#signup').prop('disabled',false);
+
+        }
+        else{
+            $('#signup').prop('disabled',true);
+        }
+    });
     $('#signup').click(function () {
 
         sendToServer();
