--- a/template.html
+++ b/template.html
@@ -11,6 +11,8 @@
     <!--<link rel="stylesheet"-->
           <!--href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/4.0.1/bootstrap-material-design.min.css">css-->
     <link rel="stylesheet" href="/css/style.css">
+
+    <script src="js/loader.js"></script>
 </head>
 <body>
 
