--- a/_login.html
+++ b/_login.html
@@ -4,7 +4,7 @@
     <div class="row text-center">
         <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-lg-4 col-md-offset-3 col-lg-offset-4">
             <h2 class="form-signin-heading">Fetch Login</h2><br>
-            <input type="text" class="form-control" id="user-name" name="username" placeholder="User Name"  required="" autofocus=""/><br>
+            <input type="email" class="form-control" id="Email" name="email" placeholder="Email"  required="" autofocus=""/><br>
             <input type="password" class="form-control" id="pass" name="password" placeholder="Password" required=""/><br>
             <div class="checkbox">
                 <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me<br>
@@ -15,25 +15,22 @@
 </div>
 <script>
     $('#login').prop('disabled',true);
-    $('#user-name,#pass').keyup(function(){
-        if($('#user-name').val()&& $('#pass').val()) {
+    $('#Email, #pass').keyup(function(){
+        if($('#Email').val()&& $('#pass').val()) {
             $('#login').prop('disabled',false);
-
         }
         else{
             $('#login').prop('disabled',true);
         }
     });
     $('#login').click(function () {
-
             sendToServer();
-
     });
 
     function sendToServer(){
         var info_to_send = {};
-        info_to_send.name = $('#user-name').val();
-        info_to_send.passWord = $('#pass').val();
+        info_to_send.email = $('#Email').val();
+        info_to_send.password = $('#pass').val();
         info_to_send.type = "get";
 
         //Simulation (alert or console.log to check for yourself)
@@ -47,8 +44,9 @@
             success: function(data){
                 //data is the object sent back on success (could also just be string)
                 alert("Congrats!");
+                window.location.href =" /_homePage.html";
             },
-            fail: function(data){
+            error: function(data){
                 alert("fail");
                 //data is the object send back on fail (could also just be string)
             }
