--- a/_driverList.html
+++ b/_driverList.html
@@ -1,4 +1,3 @@
-<body>
 <div class="container text-center">
     <div class="row">
         <div class="col-xs-12">
@@ -14,9 +13,11 @@
 </div>
 <div id="dropdown1" class="collapse row">
     <div class="text-center">
-        <div class="col-xs-12"><input type="checkbox" class="check" value="cheap" id = "cheap">Get the Cheapest one</div>
-        <div class="col-xs-12"><input type="checkbox" class="check" value="expensive" id="expensive">Get the most expensive
-            one</div>
+        <div class="col-xs-12"><input type="checkbox" class="check" value="cheap" id="cheap">Get the Cheapest one</div>
+        <div class="col-xs-12"><input type="checkbox" class="check" value="expensive" id="expensive">Get the most
+            expensive
+            one
+        </div>
         <div class="col-xs-12"><input type="checkbox" class="check" value="none" id="none">Don't get it</div>
     </div>
 </div>
@@ -25,9 +26,7 @@
         <button id="ready" type="button" class="btn-block">Ready For shipping!</button>
     </div>
 </div>
-</div>
 
 
-<script type="text/javascript" src = "/js/_driverList.js"></script>
+<script type="text/javascript" src="/js/_driverList.js"></script>
 
-</body>
