some of the glyphicons are back

--- a/index.html
+++ b/index.html
@@ -147,6 +147,12 @@
 
 
     var allSections = ['abovePages', 'createTicket', 'acceptTicket', 'confirmTicket', 'driverFlow'];
+    var glyphiconClasses = {
+        abovePages: ["glyphicon glyphicon-cog", "", "", "glyphicon glyphicon-wrench", "glyphicon glyphicon-repeat", "glyphicon glyphicon-plus-sign", "glyphicon glyphicon-log-in"],
+        createTicket: ["", "", "glyphicon glyphicon-check", ""],
+        acceptTicket: ['', ''],
+        confirmTicket: ['_confirmTicket', "glyphicon glyphicon-signal", '_ticketClosed'],
+        driverFlow: ['glyphicon glyphicon-list-alt', '_driverList', '', '', 'glyphicon glyphicon-signal', '']};
     var allPages = {
         abovePages: ["_accSetting", "_contact", "_history", "_passwordRecovery", "_passwordReset", "_signUp", "_login"],
         createTicket: ["_homePage", "_shopping", "_checkout", "_submitted"],
@@ -161,13 +167,16 @@
     $(document).ready(function () {
         var i;
         var whichid;
+        var glyph;
         for (var j = 0; j < allSections.length; j++) {
             var sectionName = allSections[j];
             var section = allPages[sectionName];
+            var glyphName =  glyphiconClasses[sectionName];
             for (i = 0; i < section.length; i++) {
                 whichid = section[i];
+                glyph = glyphName[i];
                 loadPage(whichid, '#' + sectionName, i);
-                $('#Butt').append("<div data-link='/#" + whichid + "' class='sign'>" + whichid + "</div>");
+                $('#Butt').append("<div data-link='/#" + whichid + "' class= '" +glyph+"'>" + whichid + "</div>");
             }
         }
     });
